drm/msm/dp: switch to devm_drm_bridge_add() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14298,6 +14298,7 @@
 	patches.suse/1287-drm-msm-dsi-switch-to-devm_drm_bridge_add.patch
 	patches.suse/1288-drm-msm-hdmi-switch-to-devm_drm_bridge_add.patch
 	patches.suse/1289-drm-msm-dp-move-pdev-from-struct-dp_display_private-.patch
+	patches.suse/1290-drm-msm-dp-switch-to-devm_drm_bridge_add.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
