drm/msm: remove shutdown callback from msm_platform_driver (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14302,6 +14302,7 @@
 	patches.suse/1291-drm-msm-remove-msm_drm_private-bridges-field.patch
 	patches.suse/1292-drm-msm-drop-pm-ops-from-the-headless-msm-driver.patch
 	patches.suse/1293-drm-msm-rename-msm_pm_prepare-complete-to-note-the-K.patch
+	patches.suse/1294-drm-msm-remove-shutdown-callback-from-msm_platform_d.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
