--- a/series.conf
+++ b/series.conf
@@ -14304,6 +14304,7 @@
 	patches.suse/1293-drm-msm-rename-msm_pm_prepare-complete-to-note-the-K.patch
 	patches.suse/1294-drm-msm-remove-shutdown-callback-from-msm_platform_d.patch
 	patches.suse/1295-drm-msm-rename-msm_drv_shutdown-to-msm_kms_shutdown.patch
+	patches.suse/1296-drm-msm-switch-to-drmm_mode_config_init.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
