drm/msm: make fb debugfs file available only in KMS case (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14306,6 +14306,7 @@
 	patches.suse/1295-drm-msm-rename-msm_drv_shutdown-to-msm_kms_shutdown.patch
 	patches.suse/1296-drm-msm-switch-to-drmm_mode_config_init.patch
 	patches.suse/1297-drm-msm-only-register-kms-debug-file-if-KMS-is-used.patch
+	patches.suse/1298-drm-msm-make-fb-debugfs-file-available-only-in-KMS-c.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
