--- a/series.conf
+++ b/series.conf
@@ -14309,6 +14309,7 @@
 	patches.suse/1298-drm-msm-make-fb-debugfs-file-available-only-in-KMS-c.patch
 	patches.suse/1299-drm-msm-carve-out-KMS-code-from-msm_drv.c.patch
 	patches.suse/1300-drm-msm-fix-fault-injection-support.patch
+	patches.suse/1301-drm-msm-dsi-use-correct-lifetime-device-for-devm_drm.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
