drm/msm/hdmi: use correct lifetime device for devm_drm_bridge_add (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14310,6 +14310,7 @@
 	patches.suse/1299-drm-msm-carve-out-KMS-code-from-msm_drv.c.patch
 	patches.suse/1300-drm-msm-fix-fault-injection-support.patch
 	patches.suse/1301-drm-msm-dsi-use-correct-lifetime-device-for-devm_drm.patch
+	patches.suse/1302-drm-msm-hdmi-use-correct-lifetime-device-for-devm_dr.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
