--- a/series.conf
+++ b/series.conf
@@ -14311,6 +14311,7 @@
 	patches.suse/1300-drm-msm-fix-fault-injection-support.patch
 	patches.suse/1301-drm-msm-dsi-use-correct-lifetime-device-for-devm_drm.patch
 	patches.suse/1302-drm-msm-hdmi-use-correct-lifetime-device-for-devm_dr.patch
+	patches.suse/1303-drm-msm-dp-use-correct-lifetime-device-for-devm_drm_.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
