drm/msm/a6xx: Fix up QMP handling (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14314,6 +14314,7 @@
 	patches.suse/1303-drm-msm-dp-use-correct-lifetime-device-for-devm_drm_.patch
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
+	patches.suse/1306-drm-msm-a6xx-Fix-up-QMP-handling.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
 	patches.suse/drm_lease.c-copy-user-array-safely.patch
 	patches.suse/drm-vmwgfx_surface.c-copy-user-array-safely.patch
