--- a/series.conf
+++ b/series.conf
@@ -14315,6 +14315,7 @@
 	patches.suse/drm-msm-dsi-use-msm_gem_kernel_put-to-free-TX-buffer.patch
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/1306-drm-msm-a6xx-Fix-up-QMP-handling.patch
+	patches.suse/1307-drm-msm-dpu-create-a-dpu_hw_clk_force_ctrl-helper.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
 	patches.suse/drm_lease.c-copy-user-array-safely.patch
 	patches.suse/drm-vmwgfx_surface.c-copy-user-array-safely.patch
