drm/msm/dpu: add setup_clk_force_ctrl() op to sspp & wb (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14316,6 +14316,7 @@
 	patches.suse/drm-msm-dsi-free-TX-buffer-in-unbind.patch
 	patches.suse/1306-drm-msm-a6xx-Fix-up-QMP-handling.patch
 	patches.suse/1307-drm-msm-dpu-create-a-dpu_hw_clk_force_ctrl-helper.patch
+	patches.suse/1308-drm-msm-dpu-add-setup_clk_force_ctrl-op-to-sspp-wb.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
 	patches.suse/drm_lease.c-copy-user-array-safely.patch
 	patches.suse/drm-vmwgfx_surface.c-copy-user-array-safely.patch
