drm/msm/dpu: enable writeback on SM8550 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14319,6 +14319,7 @@
 	patches.suse/1308-drm-msm-dpu-add-setup_clk_force_ctrl-op-to-sspp-wb.patch
 	patches.suse/1309-drm-msm-dpu-move-setup_force_clk_ctrl-handling-into-.patch
 	patches.suse/1310-drm-msm-dpu-sm8550-remove-unused-VIG-and-DMA-clock-c.patch
+	patches.suse/1311-drm-msm-dpu-enable-writeback-on-SM8550.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
 	patches.suse/drm_lease.c-copy-user-array-safely.patch
 	patches.suse/drm-vmwgfx_surface.c-copy-user-array-safely.patch
