--- a/series.conf
+++ b/series.conf
@@ -14320,6 +14320,7 @@
 	patches.suse/1309-drm-msm-dpu-move-setup_force_clk_ctrl-handling-into-.patch
 	patches.suse/1310-drm-msm-dpu-sm8550-remove-unused-VIG-and-DMA-clock-c.patch
 	patches.suse/1311-drm-msm-dpu-enable-writeback-on-SM8550.patch
+	patches.suse/1312-drm-msm-a7xx-actually-use-a7xx-state-registers.patch
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
 	patches.suse/drm_lease.c-copy-user-array-safely.patch
 	patches.suse/drm-vmwgfx_surface.c-copy-user-array-safely.patch
