drm/amdgpu/pm: update SMU 13.0.0 PMFW version check (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14324,6 +14324,7 @@
 	patches.suse/string.h-add-array-wrappers-for-v-memdup_user.patch
 	patches.suse/drm_lease.c-copy-user-array-safely.patch
 	patches.suse/drm-vmwgfx_surface.c-copy-user-array-safely.patch
+	patches.suse/1316-drm-amdgpu-pm-update-SMU-13.0.0-PMFW-version-check.patch
 	patches.suse/Revert-drm-amdgpu-Program-xcp_ctl-registers-as-neede.patch
 	patches.suse/drm-amd-pm-Fix-a-memory-leak-on-an-error-path.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-BL-wait.patch
