--- a/series.conf
+++ b/series.conf
@@ -14325,6 +14325,7 @@
 	patches.suse/drm_lease.c-copy-user-array-safely.patch
 	patches.suse/drm-vmwgfx_surface.c-copy-user-array-safely.patch
 	patches.suse/1316-drm-amdgpu-pm-update-SMU-13.0.0-PMFW-version-check.patch
+	patches.suse/1317-drm-amdgpu-umsch-add-suspend-and-resume-callback.patch
 	patches.suse/Revert-drm-amdgpu-Program-xcp_ctl-registers-as-neede.patch
 	patches.suse/drm-amd-pm-Fix-a-memory-leak-on-an-error-path.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-BL-wait.patch
