drm/amd/display: Add missing lines of code in dc.c (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14327,6 +14327,7 @@
 	patches.suse/1316-drm-amdgpu-pm-update-SMU-13.0.0-PMFW-version-check.patch
 	patches.suse/1317-drm-amdgpu-umsch-add-suspend-and-resume-callback.patch
 	patches.suse/Revert-drm-amdgpu-Program-xcp_ctl-registers-as-neede.patch
+	patches.suse/1319-drm-amd-display-Add-missing-lines-of-code-in-dc.c.patch
 	patches.suse/drm-amd-pm-Fix-a-memory-leak-on-an-error-path.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-BL-wait.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
