--- a/series.conf
+++ b/series.conf
@@ -14328,6 +14328,7 @@
 	patches.suse/1317-drm-amdgpu-umsch-add-suspend-and-resume-callback.patch
 	patches.suse/Revert-drm-amdgpu-Program-xcp_ctl-registers-as-neede.patch
 	patches.suse/1319-drm-amd-display-Add-missing-lines-of-code-in-dc.c.patch
+	patches.suse/1320-drm-amdgpu-Add-hive-ras-recovery-check.patch
 	patches.suse/drm-amd-pm-Fix-a-memory-leak-on-an-error-path.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-BL-wait.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
