drm/amdgpu/mes11: remove aggregated doorbell code (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14329,6 +14329,7 @@
 	patches.suse/Revert-drm-amdgpu-Program-xcp_ctl-registers-as-neede.patch
 	patches.suse/1319-drm-amd-display-Add-missing-lines-of-code-in-dc.c.patch
 	patches.suse/1320-drm-amdgpu-Add-hive-ras-recovery-check.patch
+	patches.suse/1321-drm-amdgpu-mes11-remove-aggregated-doorbell-code.patch
 	patches.suse/drm-amd-pm-Fix-a-memory-leak-on-an-error-path.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-BL-wait.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
