drm/amdgpu: update to the latest GC 11.5 headers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14331,6 +14331,7 @@
 	patches.suse/1320-drm-amdgpu-Add-hive-ras-recovery-check.patch
 	patches.suse/1321-drm-amdgpu-mes11-remove-aggregated-doorbell-code.patch
 	patches.suse/drm-amd-pm-Fix-a-memory-leak-on-an-error-path.patch
+	patches.suse/1323-drm-amdgpu-update-to-the-latest-GC-11.5-headers.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-BL-wait.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
