drm/amd: Move microcode init step to early_init() (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14334,6 +14334,7 @@
 	patches.suse/1323-drm-amdgpu-update-to-the-latest-GC-11.5-headers.patch
 	patches.suse/1324-drm-amd-Add-missing-kernel-doc-for-prepare_suspend.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-BL-wait.patch
+	patches.suse/1326-drm-amd-Move-microcode-init-step-to-early_init.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
