--- a/series.conf
+++ b/series.conf
@@ -14335,6 +14335,7 @@
 	patches.suse/1324-drm-amd-Add-missing-kernel-doc-for-prepare_suspend.patch
 	patches.suse/drm-amdgpu-update-retry-times-for-psp-BL-wait.patch
 	patches.suse/1326-drm-amd-Move-microcode-init-step-to-early_init.patch
+	patches.suse/1327-drm-amd-Don-t-parse-IMU-ucode-version-if-it-won-t-be.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
