drm/amdkfd: clean up some inconsistent indenting (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14338,6 +14338,7 @@
 	patches.suse/1327-drm-amd-Don-t-parse-IMU-ucode-version-if-it-won-t-be.patch
 	patches.suse/1328-drm-amd-Read-IMU-FW-version-from-scratch-register-du.patch
 	patches.suse/1329-drm-amd-display-Remove-brackets-in-macro-to-conform-.patch
+	patches.suse/1330-drm-amdkfd-clean-up-some-inconsistent-indenting.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
