--- a/series.conf
+++ b/series.conf
@@ -14339,6 +14339,7 @@
 	patches.suse/1328-drm-amd-Read-IMU-FW-version-from-scratch-register-du.patch
 	patches.suse/1329-drm-amd-display-Remove-brackets-in-macro-to-conform-.patch
 	patches.suse/1330-drm-amdkfd-clean-up-some-inconsistent-indenting.patch
+	patches.suse/1331-drm-amd-display-Fix-a-handful-of-spelling-mistakes-i.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
