drm/amdgpu: Log UE corrected by replay as correctable error (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14341,6 +14341,7 @@
 	patches.suse/1330-drm-amdkfd-clean-up-some-inconsistent-indenting.patch
 	patches.suse/1331-drm-amd-display-Fix-a-handful-of-spelling-mistakes-i.patch
 	patches.suse/1332-drm-amdgpu-Workaround-to-skip-kiq-ring-test-during-r.patch
+	patches.suse/1333-drm-amdgpu-Log-UE-corrected-by-replay-as-correctable.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
