--- a/series.conf
+++ b/series.conf
@@ -14343,6 +14343,7 @@
 	patches.suse/1332-drm-amdgpu-Workaround-to-skip-kiq-ring-test-during-r.patch
 	patches.suse/1333-drm-amdgpu-Log-UE-corrected-by-replay-as-correctable.patch
 	patches.suse/1334-drm-amd-pm-Support-for-getting-power1_cap_min-value.patch
+	patches.suse/1335-drm-amdkfd-remove-unused-code.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
