drm/amdgpu: define ras_reset_error_count function (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14344,6 +14344,7 @@
 	patches.suse/1333-drm-amdgpu-Log-UE-corrected-by-replay-as-correctable.patch
 	patches.suse/1334-drm-amd-pm-Support-for-getting-power1_cap_min-value.patch
 	patches.suse/1335-drm-amdkfd-remove-unused-code.patch
+	patches.suse/1336-drm-amdgpu-define-ras_reset_error_count-function.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
