--- a/series.conf
+++ b/series.conf
@@ -14345,6 +14345,7 @@
 	patches.suse/1334-drm-amd-pm-Support-for-getting-power1_cap_min-value.patch
 	patches.suse/1335-drm-amdkfd-remove-unused-code.patch
 	patches.suse/1336-drm-amdgpu-define-ras_reset_error_count-function.patch
+	patches.suse/1337-drm-amdgpu-Enable-software-RAS-in-vcn-v4_0_3.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
