drm/amd/display: clean up some inconsistent indentings (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14347,6 +14347,7 @@
 	patches.suse/1336-drm-amdgpu-define-ras_reset_error_count-function.patch
 	patches.suse/1337-drm-amdgpu-Enable-software-RAS-in-vcn-v4_0_3.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
+	patches.suse/1339-drm-amd-display-clean-up-some-inconsistent-indenting.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
