--- a/series.conf
+++ b/series.conf
@@ -14348,6 +14348,7 @@
 	patches.suse/1337-drm-amdgpu-Enable-software-RAS-in-vcn-v4_0_3.patch
 	patches.suse/drm-amd-pm-Handle-non-terminated-overdrive-commands.patch
 	patches.suse/1339-drm-amd-display-clean-up-some-inconsistent-indenting.patch
+	patches.suse/1340-drm-amd-display-Remove-duplicated-include-in-dce110_.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
