--- a/series.conf
+++ b/series.conf
@@ -14351,6 +14351,7 @@
 	patches.suse/1340-drm-amd-display-Remove-duplicated-include-in-dce110_.patch
 	patches.suse/1341-drm-amd-display-Remove-unneeded-semicolon.patch
 	patches.suse/1342-drm-amd-display-Simplify-bool-conversion.patch
+	patches.suse/1343-drm-amd-display-clean-up-some-inconsistent-indenting.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
