drm/amd/display: Respect CONFIG_FRAME_WARN=0 in DML2 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14352,6 +14352,7 @@
 	patches.suse/1341-drm-amd-display-Remove-unneeded-semicolon.patch
 	patches.suse/1342-drm-amd-display-Simplify-bool-conversion.patch
 	patches.suse/1343-drm-amd-display-clean-up-some-inconsistent-indenting.patch
+	patches.suse/1344-drm-amd-display-Respect-CONFIG_FRAME_WARN-0-in-DML2.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
