--- a/series.conf
+++ b/series.conf
@@ -14355,6 +14355,7 @@
 	patches.suse/1344-drm-amd-display-Respect-CONFIG_FRAME_WARN-0-in-DML2.patch
 	patches.suse/1345-drm-amdgpu-Add-UVD_VCPU_INT_EN2-to-dpg-sram.patch
 	patches.suse/1346-drm-amdgpu-Enable-mca-debug-mode-mode-when-ras-enabl.patch
+	patches.suse/1347-drm-amdgpu-Fix-delete-nodes-that-have-been-relesed.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
