drm/amd/amdgpu/vcn: Add RB decouple feature under SRIOV - P3 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14358,6 +14358,7 @@
 	patches.suse/1347-drm-amdgpu-Fix-delete-nodes-that-have-been-relesed.patch
 	patches.suse/1348-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
 	patches.suse/1349-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
+	patches.suse/1350-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
