--- a/series.conf
+++ b/series.conf
@@ -14359,6 +14359,7 @@
 	patches.suse/1348-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
 	patches.suse/1349-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
 	patches.suse/1350-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
+	patches.suse/1351-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
