--- a/series.conf
+++ b/series.conf
@@ -14361,6 +14361,7 @@
 	patches.suse/1350-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
 	patches.suse/1351-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
 	patches.suse/1352-drm-amdgpu-fix-typo-for-amdgpu-ras-error-data-print.patch
+	patches.suse/1353-drm-amdgpu-Enable-RAS-feature-by-default-for-APU.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
