drm/amdgpu: fix missing stuff in NBIO v7.11 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14362,6 +14362,7 @@
 	patches.suse/1351-drm-amd-amdgpu-vcn-Add-RB-decouple-feature-under-SRI.patch
 	patches.suse/1352-drm-amdgpu-fix-typo-for-amdgpu-ras-error-data-print.patch
 	patches.suse/1353-drm-amdgpu-Enable-RAS-feature-by-default-for-APU.patch
+	patches.suse/1354-drm-amdgpu-fix-missing-stuff-in-NBIO-v7.11.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
