--- a/series.conf
+++ b/series.conf
@@ -14363,6 +14363,7 @@
 	patches.suse/1352-drm-amdgpu-fix-typo-for-amdgpu-ras-error-data-print.patch
 	patches.suse/1353-drm-amdgpu-Enable-RAS-feature-by-default-for-APU.patch
 	patches.suse/1354-drm-amdgpu-fix-missing-stuff-in-NBIO-v7.11.patch
+	patches.suse/1355-drm-amdgpu-add-clockgating-support-for-NBIO-v7.7.1.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
