drm/amdgpu: add set/get mca debug mode operations (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14365,6 +14365,7 @@
 	patches.suse/1354-drm-amdgpu-fix-missing-stuff-in-NBIO-v7.11.patch
 	patches.suse/1355-drm-amdgpu-add-clockgating-support-for-NBIO-v7.7.1.patch
 	patches.suse/1356-drm-amdgpu-replace-reset_error_count-with-amdgpu_ras.patch
+	patches.suse/1357-drm-amdgpu-add-set-get-mca-debug-mode-operations.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
