--- a/series.conf
+++ b/series.conf
@@ -14368,6 +14368,7 @@
 	patches.suse/1357-drm-amdgpu-add-set-get-mca-debug-mode-operations.patch
 	patches.suse/1358-drm-amdgpu-update-the-xgmi-ta-interface-header.patch
 	patches.suse/1359-drm-amdgpu-drop-status-query-reset-for-GCEA-9.4.3-an.patch
+	patches.suse/1360-drm-amdgpu-prepare-the-output-buffer-for-GET_PEER_LI.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
