drm/amdgpu: Encapsulate all device reset info (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14370,6 +14370,7 @@
 	patches.suse/1359-drm-amdgpu-drop-status-query-reset-for-GCEA-9.4.3-an.patch
 	patches.suse/1360-drm-amdgpu-prepare-the-output-buffer-for-GET_PEER_LI.patch
 	patches.suse/1361-drm-amdgpu-support-the-port-num-info-based-on-the-ca.patch
+	patches.suse/1362-drm-amdgpu-Encapsulate-all-device-reset-info.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
