--- a/series.conf
+++ b/series.conf
@@ -14371,6 +14371,7 @@
 	patches.suse/1360-drm-amdgpu-prepare-the-output-buffer-for-GET_PEER_LI.patch
 	patches.suse/1361-drm-amdgpu-support-the-port-num-info-based-on-the-ca.patch
 	patches.suse/1362-drm-amdgpu-Encapsulate-all-device-reset-info.patch
+	patches.suse/1363-drm-amdgpu-Move-coredump-code-to-amdgpu_reset-file.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
