drm/amdkfd: remap unaligned svm ranges that have split (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14373,6 +14373,7 @@
 	patches.suse/1362-drm-amdgpu-Encapsulate-all-device-reset-info.patch
 	patches.suse/1363-drm-amdgpu-Move-coredump-code-to-amdgpu_reset-file.patch
 	patches.suse/1364-drm-amdgpu-Create-version-number-for-coredumps.patch
+	patches.suse/1365-drm-amdkfd-remap-unaligned-svm-ranges-that-have-spli.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
