--- a/series.conf
+++ b/series.conf
@@ -14374,6 +14374,7 @@
 	patches.suse/1363-drm-amdgpu-Move-coredump-code-to-amdgpu_reset-file.patch
 	patches.suse/1364-drm-amdgpu-Create-version-number-for-coredumps.patch
 	patches.suse/1365-drm-amdkfd-remap-unaligned-svm-ranges-that-have-spli.patch
+	patches.suse/1366-drm-amd-display-Reduce-stack-size-by-splitting-funct.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
