drm/amd/display: Fix stack size issue on DML2 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14375,6 +14375,7 @@
 	patches.suse/1364-drm-amdgpu-Create-version-number-for-coredumps.patch
 	patches.suse/1365-drm-amdkfd-remap-unaligned-svm-ranges-that-have-spli.patch
 	patches.suse/1366-drm-amd-display-Reduce-stack-size-by-splitting-funct.patch
+	patches.suse/1367-drm-amd-display-Fix-stack-size-issue-on-DML2.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
