--- a/series.conf
+++ b/series.conf
@@ -14377,6 +14377,7 @@
 	patches.suse/1366-drm-amd-display-Reduce-stack-size-by-splitting-funct.patch
 	patches.suse/1367-drm-amd-display-Fix-stack-size-issue-on-DML2.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
+	patches.suse/1368-drm-bridge-megachips-stdpxxxx-ge-b850v3-fw-switch-to.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
