drm/ssd130x: Fix atomic_check for disabled planes (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14378,6 +14378,7 @@
 	patches.suse/1367-drm-amd-display-Fix-stack-size-issue-on-DML2.patch
 	patches.suse/usb-typec-altmodes-displayport-fixup-drm-internal-ap.patch
 	patches.suse/1368-drm-bridge-megachips-stdpxxxx-ge-b850v3-fw-switch-to.patch
+	patches.suse/1369-drm-ssd130x-Fix-atomic_check-for-disabled-planes.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
