--- a/series.conf
+++ b/series.conf
@@ -14380,6 +14380,7 @@
 	patches.suse/1368-drm-bridge-megachips-stdpxxxx-ge-b850v3-fw-switch-to.patch
 	patches.suse/1369-drm-ssd130x-Fix-atomic_check-for-disabled-planes.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
+	patches.suse/1371-drm-panel-st7703-Fix-timings-when-entering-exiting-s.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
 	patches.suse/drm-rockchip-remove-unused-struct-in-vop2.patch
