--- a/series.conf
+++ b/series.conf
@@ -53970,6 +53970,7 @@
 	patches.suse/x86-bugs-unconditionally-allow-spectre_v2-retpoline-amd.patch
 	patches.suse/edac-amd64-handle-three-rank-interleaving-mode.patch
 	patches.suse/edac-sb_edac-fix-top-of-high-memory-value-for-broadwell-haswell.patch
+	patches.suse/x86-asm-Add-_ASM_RIP-macro-for-x86-64-rip-suffix.patch
 	patches.suse/x86-cpu-fix-migration-safety-with-x86_bug_null_sel.patch
 	patches.suse/x86-sme-use-define-use_early_pgtable_l5-in-mem_encrypt_identity-c.patch
 	patches.suse/x86-sev-fix-stack-type-check-in-vc_switch_off_ist
