--- a/series.conf
+++ b/series.conf
@@ -5060,6 +5060,7 @@
 	patches.suse/x86-sev-replace-occurrences-of-sev_active-with-cc_platform_has
 	patches.suse/x86-sev-replace-occurrences-of-sev_es_active-with-cc_platform_has
 	patches.suse/treewide-replace-the-use-of-mem_encrypt_active-with-cc_platform_has
+	patches.suse/x86-asm-Add-_ASM_RIP-macro-for-x86-64-rip-suffix.patch
 	patches.suse/x86-cpu-Fix-migration-safety-with-X86_BUG_NULL_SEL.patch
 	patches.suse/x86-insn-Use-get_unaligned-instead-of-memcpy.patch
 	patches.suse/x86-sev-carve-out-hv-call-s-return-value-verification
