--- a/series.conf
+++ b/series.conf
@@ -4854,6 +4854,7 @@
 	patches.suse/i2c-tegra-Share-same-DMA-channel-for-RX-and-TX.patch
 	patches.suse/i2c-Delete-error-messages-for-failed-memory-all.patch
 	patches.suse/i2c-Improve-size-determinations.patch
+	patches.suse/1372-i2c-Add-i2c_get_match_data.patch
 	patches.suse/usb-typec-ucsi-Mark-dGPUs-as-DEVICE-scope.patch
 	patches.suse/i2c-nomadik-Remove-unnecessary-goto-label.patch
 	patches.suse/i2c-nomadik-Use-devm_clk_get_enabled.patch
