--- a/series.conf
+++ b/series.conf
@@ -14382,6 +14382,7 @@
 	patches.suse/1369-drm-ssd130x-Fix-atomic_check-for-disabled-planes.patch
 	patches.suse/drm-panel-st7703-Pick-different-reset-sequence.patch
 	patches.suse/1371-drm-panel-st7703-Fix-timings-when-entering-exiting-s.patch
+	patches.suse/1373-drm-adv7511-Add-struct-adv7511_chip_info-and-use-i2c.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
 	patches.suse/drm-rockchip-remove-unused-struct-in-vop2.patch
