--- a/series.conf
+++ b/series.conf
@@ -14385,6 +14385,7 @@
 	patches.suse/1373-drm-adv7511-Add-struct-adv7511_chip_info-and-use-i2c.patch
 	patches.suse/1374-drm-adv7511-Add-max_mode_clock_khz-variable-to-struc.patch
 	patches.suse/1375-drm-adv7511-Add-max_lane_freq_khz-variable-to-struct.patch
+	patches.suse/1376-drm-adv7511-Add-supply_names-and-num_supplies-variab.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
 	patches.suse/drm-rockchip-remove-unused-struct-in-vop2.patch
