--- a/series.conf
+++ b/series.conf
@@ -14387,6 +14387,7 @@
 	patches.suse/1375-drm-adv7511-Add-max_lane_freq_khz-variable-to-struct.patch
 	patches.suse/1376-drm-adv7511-Add-supply_names-and-num_supplies-variab.patch
 	patches.suse/1377-drm-adv7511-Add-reg_cec_offset-variable-to-struct-ad.patch
+	patches.suse/1378-drm-adv7511-Add-has_dsi-variable-to-struct-adv7511_c.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
 	patches.suse/drm-rockchip-remove-unused-struct-in-vop2.patch
