--- a/series.conf
+++ b/series.conf
@@ -14389,6 +14389,7 @@
 	patches.suse/1377-drm-adv7511-Add-reg_cec_offset-variable-to-struct-ad.patch
 	patches.suse/1378-drm-adv7511-Add-has_dsi-variable-to-struct-adv7511_c.patch
 	patches.suse/1379-drm-adv7511-Add-link_config-variable-to-struct-adv75.patch
+	patches.suse/1380-drm-adv7511-Add-hpd_override_enable-variable-to-stru.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
 	patches.suse/drm-rockchip-remove-unused-struct-in-vop2.patch
