--- a/series.conf
+++ b/series.conf
@@ -14391,6 +14391,7 @@
 	patches.suse/1379-drm-adv7511-Add-link_config-variable-to-struct-adv75.patch
 	patches.suse/1380-drm-adv7511-Add-hpd_override_enable-variable-to-stru.patch
 	patches.suse/1381-drm-bridge-synopsys-dw-mipi-dsi-Add-dw_mipi_dsi_get_.patch
+	patches.suse/1382-drm-bridge-synopsys-dw-mipi-dsi-Add-input-bus-format.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
 	patches.suse/drm-rockchip-remove-unused-struct-in-vop2.patch
