--- a/series.conf
+++ b/series.conf
@@ -14395,6 +14395,7 @@
 	patches.suse/1383-drm-bridge-synopsys-dw-mipi-dsi-Force-input-bus-flag.patch
 	patches.suse/1384-drm-bridge-synopsys-dw-mipi-dsi-Add-mode-fixup-suppo.patch
 	patches.suse/1385-drm-bridge-synopsys-dw-mipi-dsi-Use-pixel-clock-rate.patch
+	patches.suse/1386-drm-bridge-synopsys-dw-mipi-dsi-Set-minimum-lane-byt.patch
 	patches.suse/drm-bridge-lt9611uxc-fix-the-race-in-the-error-path.patch
 	patches.suse/drm-rockchip-Fix-type-promotion-bug-in-rockchip_gem_.patch
 	patches.suse/drm-rockchip-remove-unused-struct-in-vop2.patch
