drm/gpuvm: Dual-licence the drm_gpuvm code GPL-2.0 OR MIT (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14404,6 +14404,7 @@
 	patches.suse/1392-drm-rockchip-remove-NR_LAYERS-macro-on-vop2.patch
 	patches.suse/1393-drm-panel-st7703-Add-Powkiddy-RGB30-Panel-Support.patch
 	patches.suse/1394-Documentation-gpu-Add-a-VM_BIND-async-document.patch
+	patches.suse/1395-drm-gpuvm-Dual-licence-the-drm_gpuvm-code-GPL-2.0-OR.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
