fbdev/68328fb: Initialize fb_ops to fbdev I/O-memory helpers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14410,6 +14410,7 @@
 	patches.suse/1398-drm-ssd130x-Rename-commands-that-are-shared-across-c.patch
 	patches.suse/1399-drm-ssd130x-Add-support-for-the-SSD132x-OLED-control.patch
 	patches.suse/1400-fbdev-Provide-I-O-memory-helpers-as-module.patch
+	patches.suse/1401-fbdev-68328fb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
