--- a/series.conf
+++ b/series.conf
@@ -14413,6 +14413,7 @@
 	patches.suse/1401-fbdev-68328fb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/1402-fbdev-amba-clcd-Initialize-fb_ops-to-fbdev-I-O-memor.patch
 	patches.suse/1403-fbdev-amifb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
+	patches.suse/1404-fbdev-arkfb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
