fbdev/atafb: Initialize fb_ops to fbdev I/O-memory helpers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14414,6 +14414,7 @@
 	patches.suse/1402-fbdev-amba-clcd-Initialize-fb_ops-to-fbdev-I-O-memor.patch
 	patches.suse/1403-fbdev-amifb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1404-fbdev-arkfb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
+	patches.suse/1405-fbdev-atafb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
