--- a/series.conf
+++ b/series.conf
@@ -14418,6 +14418,7 @@
 	patches.suse/1406-fbdev-atyfb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1407-fbdev-au1100fb-Initialize-fb_ops-to-fbdev-I-O-memory.patch
 	patches.suse/1408-fbdev-cirrusfb-Initialize-fb_ops-to-fbdev-I-O-memory.patch
+	patches.suse/1409-fbdev-cobalt-lcd-Initialize-fb_ops-to-fbdev-I-O-memo.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
