--- a/series.conf
+++ b/series.conf
@@ -14420,6 +14420,7 @@
 	patches.suse/1408-fbdev-cirrusfb-Initialize-fb_ops-to-fbdev-I-O-memory.patch
 	patches.suse/1409-fbdev-cobalt-lcd-Initialize-fb_ops-to-fbdev-I-O-memo.patch
 	patches.suse/1410-fbdev-controlfb-Initialize-fb_ops-to-fbdev-I-O-memor.patch
+	patches.suse/1411-fbdev-cyber2000fb-Initialize-fb_ops-to-fbdev-I-O-mem.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
