--- a/series.conf
+++ b/series.conf
@@ -14426,6 +14426,7 @@
 	patches.suse/1414-fbdev-gbefb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1415-fbdev-hgafb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1416-fbdev-hitfb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
+	patches.suse/1417-fbdev-hpfb-Initialize-fb_ops-to-fbdev-I-O-memory-hel.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
