fbdev/neofb: Initialize fb_ops to fbdev I/O-memory helpers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14431,6 +14431,7 @@
 	patches.suse/1419-fbdev-imsttfb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/1420-fbdev-intelfb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/1421-fbdev-matroxfb-Initialize-fb_ops-to-fbdev-I-O-memory.patch
+	patches.suse/1422-fbdev-neofb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
