--- a/series.conf
+++ b/series.conf
@@ -14433,6 +14433,7 @@
 	patches.suse/1421-fbdev-matroxfb-Initialize-fb_ops-to-fbdev-I-O-memory.patch
 	patches.suse/1422-fbdev-neofb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1423-fbdev-nvidiafb-Initialize-fb_ops-to-fbdev-I-O-memory.patch
+	patches.suse/1424-fbdev-omapfb-Initialize-fb_ops-to-fbdev-I-O-memory-h.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
