fbdev/pvr2fb: Initialize fb_ops to fbdev I/O-memory helpers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14436,6 +14436,7 @@
 	patches.suse/1424-fbdev-omapfb-Initialize-fb_ops-to-fbdev-I-O-memory-h.patch
 	patches.suse/1425-fbdev-pm2fb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1426-fbdev-pm3fb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
+	patches.suse/1427-fbdev-pvr2fb-Initialize-fb_ops-to-fbdev-I-O-memory-h.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
