--- a/series.conf
+++ b/series.conf
@@ -14446,6 +14446,7 @@
 	patches.suse/1434-fbdev-sisfb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1435-fbdev-sm501fb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/1436-fbdev-sm712fb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
+	patches.suse/1437-fbdev-stifb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
