fbdev/sunxvr500: Initialize fb_ops to fbdev I/O-memory helpers (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14447,6 +14447,7 @@
 	patches.suse/1435-fbdev-sm501fb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/1436-fbdev-sm712fb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/1437-fbdev-stifb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
+	patches.suse/1438-fbdev-sunxvr500-Initialize-fb_ops-to-fbdev-I-O-memor.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
