--- a/series.conf
+++ b/series.conf
@@ -14449,6 +14449,7 @@
 	patches.suse/1437-fbdev-stifb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1438-fbdev-sunxvr500-Initialize-fb_ops-to-fbdev-I-O-memor.patch
 	patches.suse/1439-fbdev-tdfxfb-Initialize-fb_ops-to-fbdev-I-O-memory-h.patch
+	patches.suse/1440-fbdev-tgafb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
