--- a/series.conf
+++ b/series.conf
@@ -14454,6 +14454,7 @@
 	patches.suse/1442-fbdev-vermilionfb-Initialize-fb_ops-to-fbdev-I-O-mem.patch
 	patches.suse/1443-fbdev-vga16fb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/1444-fbdev-viafb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
+	patches.suse/1445-fbdev-vt8623fb-Initialize-fb_ops-to-fbdev-I-O-memory.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
