drm/ast: Rename AST_IO_AR_PORT_WRITE to AST_IO_VGAARI_W (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14455,6 +14455,7 @@
 	patches.suse/1443-fbdev-vga16fb-Initialize-fb_ops-to-fbdev-I-O-memory-.patch
 	patches.suse/1444-fbdev-viafb-Initialize-fb_ops-to-fbdev-I-O-memory-he.patch
 	patches.suse/1445-fbdev-vt8623fb-Initialize-fb_ops-to-fbdev-I-O-memory.patch
+	patches.suse/1446-drm-ast-Rename-AST_IO_AR_PORT_WRITE-to-AST_IO_VGAARI.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
