--- a/series.conf
+++ b/series.conf
@@ -14460,6 +14460,7 @@
 	patches.suse/1448-drm-ast-Rename-AST_IO_VGA_ENABLE_PORT-to-AST_IO_VGAE.patch
 	patches.suse/1449-drm-ast-Rename-AST_IO_SEQ_PORT-to-AST_IO_VGASRI.patch
 	patches.suse/1450-drm-ast-Rename-AST_IO_DAC_INDEX_READ-to-AST_IO_VGADR.patch
+	patches.suse/1451-drm-ast-Rename-AST_IO_DAC_INDEX_WRITE-to-AST_IO_VGAD.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
