drm/ast: Rename AST_IO_CRTC_PORT to AST_IO_VGACRI (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14463,6 +14463,7 @@
 	patches.suse/1451-drm-ast-Rename-AST_IO_DAC_INDEX_WRITE-to-AST_IO_VGAD.patch
 	patches.suse/1452-drm-ast-Rename-AST_IO_DAC_DATA-to-AST_IO_VGAPDR.patch
 	patches.suse/1453-drm-ast-Rename-AST_IO_GR_PORT-to-AST_IO_VGAGRI.patch
+	patches.suse/1454-drm-ast-Rename-AST_IO_CRTC_PORT-to-AST_IO_VGACRI.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
