--- a/series.conf
+++ b/series.conf
@@ -14464,6 +14464,7 @@
 	patches.suse/1452-drm-ast-Rename-AST_IO_DAC_DATA-to-AST_IO_VGAPDR.patch
 	patches.suse/1453-drm-ast-Rename-AST_IO_GR_PORT-to-AST_IO_VGAGRI.patch
 	patches.suse/1454-drm-ast-Rename-AST_IO_CRTC_PORT-to-AST_IO_VGACRI.patch
+	patches.suse/1455-drm-ast-Rename-AST_IO_INPUT_STATUS1_READ-to-AST_IO_V.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
