--- a/series.conf
+++ b/series.conf
@@ -14465,6 +14465,7 @@
 	patches.suse/1453-drm-ast-Rename-AST_IO_GR_PORT-to-AST_IO_VGAGRI.patch
 	patches.suse/1454-drm-ast-Rename-AST_IO_CRTC_PORT-to-AST_IO_VGACRI.patch
 	patches.suse/1455-drm-ast-Rename-AST_IO_INPUT_STATUS1_READ-to-AST_IO_V.patch
+	patches.suse/1456-drm-ast-Rename-AST_IO_MISC_PORT_READ-to-AST_IO_VGAMR.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
