drm/ast: Move register constants to ast_reg.h (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14466,6 +14466,7 @@
 	patches.suse/1454-drm-ast-Rename-AST_IO_CRTC_PORT-to-AST_IO_VGACRI.patch
 	patches.suse/1455-drm-ast-Rename-AST_IO_INPUT_STATUS1_READ-to-AST_IO_V.patch
 	patches.suse/1456-drm-ast-Rename-AST_IO_MISC_PORT_READ-to-AST_IO_VGAMR.patch
+	patches.suse/1457-drm-ast-Move-register-constants-to-ast_reg.h.patch
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
