--- a/series.conf
+++ b/series.conf
@@ -14470,6 +14470,7 @@
 	patches.suse/1458-drm-panel-ili9882t-Break-out-as-separate-driver.patch
 	patches.suse/1459-drm-panel-ili9882t-Avoid-blurred-screen-from-fast-sl.patch
 	patches.suse/drm-vc4-fix-typo.patch
+	patches.suse/1461-drm-doc-use-cross-references-for-macros.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
