drm/bridge: synopsys: dw-mipi-dsi: Fix hcomponent lbcc for burst mode (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14472,6 +14472,7 @@
 	patches.suse/drm-vc4-fix-typo.patch
 	patches.suse/1461-drm-doc-use-cross-references-for-macros.patch
 	patches.suse/1462-drm-client-Convert-drm_client_buffer_addfb-to-drm_mo.patch
+	patches.suse/1463-drm-bridge-synopsys-dw-mipi-dsi-Fix-hcomponent-lbcc-.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
