drm/rockchip: vop2: Add more supported 10bit formats (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14475,6 +14475,7 @@
 	patches.suse/1463-drm-bridge-synopsys-dw-mipi-dsi-Fix-hcomponent-lbcc-.patch
 	patches.suse/1464-drm-rockchip-vop-fix-format-bpp-calculation.patch
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
+	patches.suse/1466-drm-rockchip-vop2-Add-more-supported-10bit-formats.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
