--- a/series.conf
+++ b/series.conf
@@ -14477,6 +14477,7 @@
 	patches.suse/drm-rockchip-vop2-remove-the-unsupported-format-of-c.patch
 	patches.suse/1466-drm-rockchip-vop2-Add-more-supported-10bit-formats.patch
 	patches.suse/1467-drm-rockchip-vop2-rename-window-formats-to-show-wind.patch
+	patches.suse/1468-drm-fourcc-Add-NV20-and-NV30-YUV-formats.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
