drm/rockchip: vop: Add NV15, NV20 and NV30 support (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14478,6 +14478,7 @@
 	patches.suse/1466-drm-rockchip-vop2-Add-more-supported-10bit-formats.patch
 	patches.suse/1467-drm-rockchip-vop2-rename-window-formats-to-show-wind.patch
 	patches.suse/1468-drm-fourcc-Add-NV20-and-NV30-YUV-formats.patch
+	patches.suse/1469-drm-rockchip-vop-Add-NV15-NV20-and-NV30-support.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
