--- a/series.conf
+++ b/series.conf
@@ -14479,6 +14479,7 @@
 	patches.suse/1467-drm-rockchip-vop2-rename-window-formats-to-show-wind.patch
 	patches.suse/1468-drm-fourcc-Add-NV20-and-NV30-YUV-formats.patch
 	patches.suse/1469-drm-rockchip-vop-Add-NV15-NV20-and-NV30-support.patch
+	patches.suse/1470-drm-doc-document-DRM_IOCTL_MODE_CREATE_DUMB.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
