drm/doc: ci: Require more context for flaky tests (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14480,6 +14480,7 @@
 	patches.suse/1468-drm-fourcc-Add-NV20-and-NV30-YUV-formats.patch
 	patches.suse/1469-drm-rockchip-vop-Add-NV15-NV20-and-NV30-support.patch
 	patches.suse/1470-drm-doc-document-DRM_IOCTL_MODE_CREATE_DUMB.patch
+	patches.suse/1471-drm-doc-ci-Require-more-context-for-flaky-tests.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
