--- a/series.conf
+++ b/series.conf
@@ -14481,6 +14481,7 @@
 	patches.suse/1469-drm-rockchip-vop-Add-NV15-NV20-and-NV30-support.patch
 	patches.suse/1470-drm-doc-document-DRM_IOCTL_MODE_CREATE_DUMB.patch
 	patches.suse/1471-drm-doc-ci-Require-more-context-for-flaky-tests.patch
+	patches.suse/1472-drm-ci-pick-up-external-fixes-from-the-merge-target-.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
