--- a/series.conf
+++ b/series.conf
@@ -14485,6 +14485,7 @@
 	patches.suse/1473-drm-ci-force-enable-CONFIG_MSM_MMCC_8996-as-built-in.patch
 	patches.suse/1474-drm-ci-Enable-CONFIG_BACKLIGHT_CLASS_DEVICE.patch
 	patches.suse/1475-drm-ci-uprev-mesa-version-fix-container-build-crosvm.patch
+	patches.suse/1476-drm-ci-fix-DEBIAN_ARCH-and-get-amdgpu-probing.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
