--- a/series.conf
+++ b/series.conf
@@ -14487,6 +14487,7 @@
 	patches.suse/1475-drm-ci-uprev-mesa-version-fix-container-build-crosvm.patch
 	patches.suse/1476-drm-ci-fix-DEBIAN_ARCH-and-get-amdgpu-probing.patch
 	patches.suse/1477-drm-ci-add-helper-script-update-xfails.py.patch
+	patches.suse/1478-drm-ci-uprev-IGT-and-make-sure-core_getversion-is-ru.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
