--- a/series.conf
+++ b/series.conf
@@ -14490,6 +14490,7 @@
 	patches.suse/1478-drm-ci-uprev-IGT-and-make-sure-core_getversion-is-ru.patch
 	patches.suse/1479-drm-ci-clean-up-xfails-specially-flakes-list.patch
 	patches.suse/1480-drm-ci-add-subset-1-gfx-to-LAVA_TAGS-and-adjust-shar.patch
+	patches.suse/1481-drm-ci-increase-i915-job-timeout-to-1h30m.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
