--- a/series.conf
+++ b/series.conf
@@ -14492,6 +14492,7 @@
 	patches.suse/1480-drm-ci-add-subset-1-gfx-to-LAVA_TAGS-and-adjust-shar.patch
 	patches.suse/1481-drm-ci-increase-i915-job-timeout-to-1h30m.patch
 	patches.suse/1482-drm-ci-export-kernel-config.patch
+	patches.suse/1483-drm-ci-do-not-automatically-retry-on-error.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
