--- a/series.conf
+++ b/series.conf
@@ -14493,6 +14493,7 @@
 	patches.suse/1481-drm-ci-increase-i915-job-timeout-to-1h30m.patch
 	patches.suse/1482-drm-ci-export-kernel-config.patch
 	patches.suse/1483-drm-ci-do-not-automatically-retry-on-error.patch
+	patches.suse/1484-drm-ci-docs-add-step-about-how-to-request-privileges.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
